# doodle2stl

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
